--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.2.3</version>
+        </dependency>
     </dependencies>
 
     <properties>
