--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -118,6 +125,12 @@
             <groupId>org.joml</groupId>
             <artifactId>joml</artifactId>
             <version>1.9.25</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.kotlin-graphics</groupId>
+            <artifactId>assimp</artifactId>
+            <version>v4.0</version>
         </dependency>
     </dependencies>
 </project>
