--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.alexng</groupId>
-    <artifactId>Untitled</artifactId>
+    <artifactId>Volumetric Voxels</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
